<resources>
    <string name="app_name">Moca</string>
    <string name="library_fragment">Library</string>
    <string name="item_list_fragment">All Item</string>
    <string name="all_discounts_fragment">All Discounts</string>
    <string name="shopping_kart">Shopping Kart</string>
    <string name="back_text">Back</string>
    <string name="clear_sale">CLEAR SALE</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="quantity">Quantity</string>
    <string name="discount">Discount</string>
    <string name="discount_a">Discount A (10%)</string>
    <string name="discount_b">Discount B (35.5%)</string>
    <string name="discount_c">Discount C (50%)</string>
    <string name="discount_d">Discount D (100%)</string>
    <string name="subtotal">Subtotal</string>

    <string name="price_TEMPLATE">$ %1$s</string>
    <string name="quantity_TEMPLATE">x%1$s</string>
    <string name="shopping_kart_quantity_rule">Please Enter Between 1 to 1000</string>


</resources>
