<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:background="@color/black10"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/shopping_dialog_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        style="@style/ToolBarStyle"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/shopping_dialog_cancel"
        app:layout_constraintRight_toLeftOf="@+id/shopping_dialog_save"/>

    <TextView
        android:id="@+id/shopping_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/toolbar_height"
        android:paddingLeft="5dp"
        android:text="@string/cancel"
        android:background="@color/colorPrimary"
        android:textColor="@color/whiteColor"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/shopping_dialog_title"
        />

    <TextView
        android:id="@+id/shopping_dialog_save"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/shopping_dialog_title"
        android:text="@string/save"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingRight="5dp"
        android:textColor="@color/whiteColor"
        />
    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/shopping_dialog_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/shopping_dialog_quantity"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:layout_margin="5dp"
        android:gravity="center_vertical|right"
        android:background="@color/whiteColor"
        android:textColor="@color/blackColor"
        app:layout_constraintTop_toBottomOf="@+id/quantity_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/shopping_dialog_minus"
        android:paddingRight="5dp"

        />

    <Button
        android:id="@+id/shopping_dialog_minus"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:text="-"
        android:gravity="center"

        android:textColor="@color/blackColor"
        android:background="@color/whiteColor"
        app:layout_constraintTop_toBottomOf="@+id/quantity_text"
        android:layout_margin="5dp"
        app:layout_constraintLeft_toRightOf="@+id/shopping_dialog_quantity"
        app:layout_constraintRight_toLeftOf="@id/shopping_dialog_plus"
        />

    <Button
        android:id="@+id/shopping_dialog_plus"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:text="+"
        android:gravity="center"
        android:textColor="@color/blackColor"
        android:background="@color/whiteColor"
        app:layout_constraintTop_toBottomOf="@+id/quantity_text"
        android:layout_margin="5dp"
        app:layout_constraintLeft_toRightOf="@+id/shopping_dialog_minus"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/discount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/shopping_dialog_quantity"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Switch
        android:id="@+id/shopping_dialog_discount_a"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintTop_toBottomOf="@+id/discount_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/shopping_dialog_discount_b"
        android:background="@color/whiteColor"
        android:textColor="@color/blackColor"
        android:text="@string/discount_a"
        android:layout_margin="5dp"
        android:switchPadding="5dp"
        android:padding="5dp"
        />
    <Switch
        android:id="@+id/shopping_dialog_discount_b"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintTop_toBottomOf="@+id/discount_text"
        app:layout_constraintLeft_toRightOf="@+id/shopping_dialog_discount_a"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/whiteColor"
        android:textColor="@color/blackColor"
        android:text="@string/discount_b"
        android:layout_margin="5dp"
        android:switchPadding="5dp"
        android:padding="5dp"
        />
    <Switch
        android:id="@+id/shopping_dialog_discount_c"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintTop_toBottomOf="@+id/shopping_dialog_discount_a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/shopping_dialog_discount_d"
        android:background="@color/whiteColor"
        android:textColor="@color/blackColor"
        android:text="@string/discount_c"
        android:layout_margin="5dp"
        android:switchPadding="5dp"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        />
    <Switch
        android:id="@+id/shopping_dialog_discount_d"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintTop_toBottomOf="@+id/shopping_dialog_discount_a"
        app:layout_constraintLeft_toRightOf="@+id/shopping_dialog_discount_c"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/whiteColor"
        android:textColor="@color/blackColor"
        android:text="@string/discount_d"
        android:layout_margin="5dp"
        android:switchPadding="5dp"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        />
</android.support.constraint.ConstraintLayout>