<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:text="@string/shopping_kart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/shopping_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/shopping_kart_subtotal_text"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        >
    </android.support.v7.widget.RecyclerView>
    <TextView
        android:id="@+id/shopping_kart_subtotal_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        app:layout_constraintTop_toBottomOf="@+id/shopping_list_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/shopping_kart_subtotal"
        app:layout_constraintBottom_toTopOf="@+id/shopping_kart_discount_text"
        android:layout_marginBottom="10dp"
        android:gravity="start|center_vertical"
        android:layout_marginLeft="5dp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/shopping_kart_subtotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/shopping_list_recycler_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/shopping_kart_subtotal_text"
        app:layout_constraintBottom_toTopOf="@+id/shopping_kart_discount"
        android:layout_marginBottom="10dp"
        android:gravity="end|center_vertical"
        android:layout_marginRight="5dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/shopping_kart_discount_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/discount"
        app:layout_constraintTop_toBottomOf="@+id/shopping_kart_subtotal_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/shopping_kart_discount"
        app:layout_constraintBottom_toTopOf="@+id/shopping_list_clear"
        android:layout_marginBottom="10dp"
        android:gravity="start|center_vertical"
        android:layout_marginLeft="5dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/shopping_kart_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/shopping_kart_subtotal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/shopping_kart_subtotal_text"
        app:layout_constraintBottom_toTopOf="@+id/shopping_list_clear"
        android:layout_marginBottom="10dp"
        android:gravity="end|center_vertical"
        android:layout_marginRight="5dp"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/shopping_list_clear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/charge_text_height"
        android:gravity="center"
        android:text="@string/clear_sale"
        android:background="@color/blackColor"
        android:textColor="@color/whiteColor"
        android:layout_margin="2dp"
        app:layout_constraintBottom_toTopOf="@+id/shopping_list_charge"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/shopping_list_charge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/charge_text_height"
        android:gravity="center"
        android:layout_margin="2dp"
        android:background="@color/blackColor"
        android:textColor="@color/whiteColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        />

</android.support.constraint.ConstraintLayout>